# WxDatDecrypt

./: .gitignore  LICENSE  README.md  _version.py  app.py  dump_key.py  index.html  pyproject.toml  server.py  style.css  tool.py
.github/workflows/: python-app.yml
backend/: __init__.py
backend/src/: __init__.py  decrypt.py  key.py
backend/src/wxam/: __init__.py  _wxgf.py
frontend/: app.py
frontend/static/css/: style.css
frontend/static/js/: breadcrumb.js  contextMenu.js  directoryTree.js  gallery.js  imageViewer.js  layout.js  logger.js  main.js  multiSelect.js  state.js  utils.js
frontend/templates/: index.html
