[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "WxDatDecrypt"
dynamic = ["version"]
description = "解密与查看新旧微信的图片，将微信缓存的 dat 文件解密为原始图片格式"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.1",
    "hypercorn>=0.17.3",
    "numba>=0.62.1",
    "numpy>=2.3.4",
    "pycryptodome>=3.23.0",
    "pymem>=1.14.0",
    "pywebview>=6.1",
    "rich>=14.2.0",
    "yara-python>=4.5.4",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
